# sam-mission-control

./: .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  config.example.toml  deny.toml  fleet.example.toml  install.sh
.github/workflows/: agent.yml  ci.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  SECURITY.md
scripts/: collect-agent-data.sh  scan-secrets.sh
src/: cli.rs  config.rs  db.rs  main.rs  shell.rs  theme.rs  validate.rs  wizard.rs
templates/: SOUL.md
