[package]
name = "sam-mission-control"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15.7"
mysql_async = "0.36.1"
ratatui = "0.30.0"
regex-lite = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
